# open-data-pipelines

./: .env.example  .gitignore  NextSteps.md  README.md  makefile  next_steps.md  pyproject.toml  requirements.txt  sources.md
.github/workflows/: bods_timetables.yml  cadent_underground.yml  code_point.yml  geoplace_swa.yml  naptan.yml  national_stat_postcode_lookup.yml  nhs_prescriptions.yml  open_usrns.yml  os_urns.yml  os_usrn_uprn.yml  section_58.yml  street_manager.yml
dbt/street_manager_street_works_analysis/: README.md  dbt_project.yml  run_dbt_jobs.sh
src/: main.py
src/data_processors/: bduk_premises.py  bods_timetables.py  built_up_areas.py  cadent_underground.py  code_point.py  data_processor_config.py  dft_road_stats.py  geoplace_swa.py  naptan.py  national_stat_postcode_lookup.py  new_processor_test.py  nhs_english_prescriptions.py  ons_uprn_directory.py  os_open_usrn.py  os_usrn_uprn.py  post_code_p001.py  post_code_p002.py  section_58.py  street_manager.py
src/data_sources/: bduk_premises.py  bduk_premises_jul_2025.py  bduk_premises_sept_2024.py  bduk_premises_sept_2025.py  bods_timetables.py  built_up_areas.py  cadent_underground.py  code_point.py  data_source_config.py  dft_road_stats.py  geoplace_swa.py  naptan.py  national_stat_postcode_lookup.py  nhs_english_prescriptions.py  ons_uprn_directory.py  os_open_usrn.py  os_usrn_uprn.py  post_code_p001.py  post_code_p002.py  section_58.py  street_manager.py
src/database/: database_config.py  motherduck.py  postgresql.py
src/databases/: database_config.py  (+2 more)
tests/: test_motherduck_manager.py
(+53 files in other folders)
