[project]
name = "open-data-pipelines"
version = "0.1.0"
description = "Data pipeline for processing open data"
authors = [
    {name = "christophercarlon", email = "cmcarleone@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pandas>=2.2.1",
    "openpyxl>=3.1.2",
    "duckdb==1.4.1",
    "tqdm>=4.66.2",
    "stream-unzip>=0.0.91",
    "loguru>=0.7.2",
    "pyarrow>=15.0.2",
    "pydantic>=2.7.0",
    "idna>=3.7",
    "requests>=2.31.0",
    "python-dotenv>=1.0.1",
    "geopandas>=0.14.4",
    "httpx>=0.27.0",
    "pyogrio>=0.8.0",
    "xlrd>=2.0.1",
    "polars>=1.4.1",
    "fastexcel>=0.11.5",
    "msoffcrypto-tool>=5.4.1",
    "beautifulsoup4>=4.12.3",
    "odfpy>=1.4.1",
    "dbt-duckdb==1.9.6",
    "psycopg2-binary>=2.9.10",
    "fiona>=1.10.1",
    "herdcats>=0.1.4",
]

[dependency-groups]
dev = [
    "ruff>=0.12.3",
    "pytest>=8.2.1",
    "pytest-cov>=5.0.0",
]
